--- a/admin.html
+++ b/admin.html
@@ -1,41 +1,56 @@
 <!DOCTYPE html>
-<html lang="bn">
-<head><meta charset="UTF-8"><title>Admin Panel - Add Match</title></head>
+<html>
+<head><title>Admin Panel</title></head>
 <body>
-<h1>Add New Match</h1>
-<form id="matchForm">
-  <label>Match Title: <input type="text" name="matchTitle" required /></label><br/>
-  <label>Team 1 Name: <input type="text" name="team1Name" required /></label><br/>
-  <label>Team 2 Name: <input type="text" name="team2Name" required /></label><br/>
-  <label>Team 1 Logo URL: <input type="url" name="team1Logo" required /></label><br/>
-  <label>Team 2 Logo URL: <input type="url" name="team2Logo" required /></label><br/>
-  <label>Start Time (ISO): <input type="datetime-local" name="startTime" required /></label><br/>
-  <label>Stream Link: <input type="url" name="streamLink" required /></label><br/>
-  <button type="submit">Add Match</button>
-</form>
-<div id="result"></div>
+  <h2>Match Data Update</h2>
+  <input id="title" placeholder="Match Title"><br><br>
+  <input id="team1" placeholder="Team 1"><br><br>
+  <input id="logo1" placeholder="Team 1 Logo URL"><br><br>
+  <input id="team2" placeholder="Team 2"><br><br>
+  <input id="logo2" placeholder="Team 2 Logo URL"><br><br>
+  <input id="time" type="datetime-local"><br><br>
 
-<script>
-  const API_URL = 'https://script.google.com/macros/s/AKfycbwS_NSO7fM6cWbCHTd_VsSDY1E7ZCZurPScaJJ8nD_uWc4TnoQzw7L7fVZUPfB3VwcvPw/exec';
-  document.getElementById('matchForm').addEventListener('submit', async e => {
-    e.preventDefault();
-    const formData = new FormData(e.target);
-    const data = {};
-    formData.forEach((v,k) => data[k] = v);
-    if(data.startTime) {
-      data.startTime = new Date(data.startTime).toISOString();
+  <div id="linkList">
+    <input class="link" placeholder="Live Link 1"><br><br>
+  </div>
+  <button onclick="addLink()">Add Another Link</button><br><br>
+
+  <input id="pass" type="password" placeholder="Password"><br><br>
+  <button onclick="submitData()">Save</button>
+  <p id="msg"></p>
+
+  <script>
+    const url = 'https://script.google.com/macros/s/AKfycbwFADGzs2_ArmVzY-z2-tu9IpTL1xu2Xje5-_ZCLRsXG19SllxFrDuc1aE0mRMsBMgiVA/exec';
+
+    function addLink() {
+      const div = document.createElement("div");
+      div.innerHTML = '<input class="link" placeholder="Live Link"><br><br>';
+      document.getElementById("linkList").appendChild(div);
     }
-    const res = await fetch(API_URL, {
-      method: 'POST',
-      body: JSON.stringify(data),
-      headers: { 'Content-Type': 'application/json' }
-    });
-    const result = await res.json();
-    document.getElementById('result').textContent = result.status === "success"
-      ? "Match added successfully!"
-      : "Error: " + result.message;
-    e.target.reset();
-  });
-</script>
+
+    function submitData() {
+      const linkInputs = document.querySelectorAll(".link");
+      const links = [];
+      linkInputs.forEach(input => {
+        if (input.value.trim() !== "") links.push(input.value.trim());
+      });
+
+      const params = new URLSearchParams({
+        action: "setData",
+        title: title.value,
+        team1: team1.value,
+        logo1: logo1.value,
+        team2: team2.value,
+        logo2: logo2.value,
+        matchTime: time.value,
+        links: JSON.stringify(links),
+        password: pass.value
+      });
+
+      fetch(`${url}?${params}`)
+        .then(res => res.text())
+        .then(txt => msg.innerText = txt);
+    }
+  </script>
 </body>
 </html>
