--- a/index.html
+++ b/index.html
@@ -1,97 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>X Fire Flix - Sports TV</title>
-  <link rel="shortcut icon" href="https://i.postimg.cc/sxkGqfMT/x-fire-flix.png">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>Live Match</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { font-family: 'Segoe UI', sans-serif; background-color: #121212; color: white; }
-    body.light-mode { background-color: #f0f0f0; color: black; }
-    .logo { text-align: center; padding: 20px; }
-    .channel-card { background: rgba(255,255,255,0.05); border: 1px solid red; border-radius: 10px; padding: 10px; transition: transform 0.2s ease-in-out; cursor: pointer; }
-    .channel-card:hover { transform: scale(1.03); }
-    .channel-card img { width: 100%; height: 130px; object-fit: contain; border-radius: 10px; background: white; }
-    .channel-name { text-align: center; margin-top: 10px; font-size: 14px; font-weight: bold; }
-    .toggle-btn { margin: 10px auto; display: block; }
+    body { text-align: center; font-family: sans-serif; padding: 10px; }
+    .team-logo { width: 80px; height: 80px; object-fit: contain; }
+    #liveTag { color: red; font-size: 30px; font-weight: bold; animation: bounce 1s infinite; display: none; }
+    @keyframes bounce { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-10px); } }
+    #countdown { font-size: 22px; margin: 20px; }
+    .video-container { margin: 20px 0; }
+    iframe, video { width: 100%; height: 400px; margin-top: 10px; display: none; }
   </style>
 </head>
 <body>
-  <div class="logo text-center mb-4 border-bottom pb-3" style="border-color: #ff3c3c;">
-    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgn47Htl8rZkop10CXrSjkn7Y9zA07Zdh1athN4qyFMx7VQtvqTcaxYT6cEjUKytO-hOvJT3nbKuIJZsUAgbouV4CRSahlPAXnyFmolO3mhdZwXR0W0WlkXYXQIJn-X8pe0lUoVCUbA14neQbccB4yTO2zutHj1jSjt33Z7BylqbBQSU7e_vw2w1AK5pbvf/s600/logo.png" alt="X Fire Flix Logo" height="80" class="mb-2">
-    <h3 style="font-weight: bold; color: #ff3c3c;">CricHD <span style="color: white;">| by</span> X Fire Flix</h3>
+  <h1 id="title"></h1>
+
+  <div>
+    <img id="logo1" class="team-logo" />
+    <span id="team1"></span>
+    <span> VS </span>
+    <span id="team2"></span>
+    <img id="logo2" class="team-logo" />
   </div>
 
-  <div class="container">
-    <input id="searchInput" type="text" class="form-control mb-3" placeholder="Search Channels...">
-    <button class="btn btn-danger toggle-btn" id="toggleMode">Switch to Light Mode</button>
-    <div id="channelList" class="row g-3"></div>
-  </div>
-
-  <footer class="text-center mt-4 py-3 bg-danger text-white">
-    &copy; 2025 X Fire Flix. All rights reserved.
-  </footer>
+  <div id="countdown"></div>
+  <div id="liveTag">LIVE NOW</div>
+  <div id="videoArea" class="video-container"></div>
 
   <script>
-    const jsonUrl = 'https://raw.githubusercontent.com/abusaeeidx/CricHd-playlists-Auto-Update-permanent/main/api.json';
+    const url = "https://script.google.com/macros/s/AKfycbwFADGzs2_ArmVzY-z2-tu9IpTL1xu2Xje5-_ZCLRsXG19SllxFrDuc1aE0mRMsBMgiVA/exec?action=getData";
 
-    fetch(jsonUrl)
+    fetch(url)
       .then(res => res.json())
       .then(data => {
-        const container = document.getElementById('channelList');
-        data.forEach(item => {
-          const card = document.createElement('div');
-          card.className = 'col-6 col-md-3';
-          card.innerHTML = `
-            <div class="channel-card" onclick="location.href='player.html?id=${encodeURIComponent(item.id)}'">
-              <img src="${item.logo}" onerror="this.src='https://via.placeholder.com/150x130?text=No+Logo';" alt="Channel Logo">
-              <div class="channel-name">${item.name}</div>
-            </div>
-          `;
-          container.appendChild(card);
-        });
-      })
-      .catch(error => {
-        document.getElementById('channelList').innerHTML = '<div class="col-12 text-center text-danger">Failed to load channels.</div>';
-        console.error(error);
+        document.getElementById("title").innerText = data.title;
+        document.getElementById("team1").innerText = data.team1;
+        document.getElementById("team2").innerText = data.team2;
+        document.getElementById("logo1").src = data.logo1;
+        document.getElementById("logo2").src = data.logo2;
+
+        const matchTime = new Date(data.matchTime).getTime();
+        const countdownEl = document.getElementById("countdown");
+        const liveTag = document.getElementById("liveTag");
+        const videoArea = document.getElementById("videoArea");
+
+        const interval = setInterval(() => {
+          const now = new Date().getTime();
+          const distance = matchTime - now;
+
+          if (distance <= 0) {
+            clearInterval(interval);
+            countdownEl.innerText = "";
+            liveTag.style.display = "block";
+            data.links.forEach((link, index) => {
+              const label = document.createElement("div");
+              label.innerText = `Server ${index + 1}`;
+              videoArea.appendChild(label);
+
+              if (link.includes(".m3u8") || link.includes(".mpd")) {
+                const video = document.createElement("video");
+                video.controls = true;
+                video.autoplay = true;
+                video.src = link;
+                video.style.display = "block";
+                videoArea.appendChild(video);
+              } else {
+                const iframe = document.createElement("iframe");
+                iframe.src = link;
+                iframe.style.display = "block";
+                videoArea.appendChild(iframe);
+              }
+            });
+          } else {
+            const h = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            const m = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+            const s = Math.floor((distance % (1000 * 60)) / 1000);
+            countdownEl.innerText = `Starts in: ${h}h ${m}m ${s}s`;
+          }
+        }, 1000);
       });
-
-    // Light/Dark mode toggle
-    document.getElementById('toggleMode').addEventListener('click', () => {
-      document.body.classList.toggle('light-mode');
-      const toggleBtn = document.getElementById('toggleMode');
-      toggleBtn.textContent = document.body.classList.contains('light-mode') ? 'Switch to Dark Mode' : 'Switch to Light Mode';
-    });
-
-    // Channel search
-    document.getElementById('searchInput').addEventListener('input', function () {
-      const searchValue = this.value.toLowerCase();
-      document.querySelectorAll('.channel-card').forEach(card => {
-        const name = card.querySelector('.channel-name').textContent.toLowerCase();
-        card.parentElement.style.display = name.includes(searchValue) ? 'block' : 'none';
-      });
-    });
-
-    // Telegram Overlay
-    const telegramOverlay = document.createElement('div');
-    telegramOverlay.style.position = 'fixed';
-    telegramOverlay.style.bottom = '14px';
-    telegramOverlay.style.right = '13px';
-    telegramOverlay.style.zIndex = '9999';
-    telegramOverlay.style.background = '#0088cc';
-    telegramOverlay.style.padding = '8px 11px';
-    telegramOverlay.style.borderRadius = '26px';
-    telegramOverlay.style.display = 'flex';
-    telegramOverlay.style.alignItems = 'center';
-    telegramOverlay.style.boxShadow = '0 4px 8px rgba(0,0,0,0.3)';
-    telegramOverlay.innerHTML = `
-      <a href="https://t.me/xfireflix" target="_blank" style="display: flex; align-items: center; text-decoration: none; color: white;">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" style="width: 20px; height: 20px; margin-right: 8px;">
-        <span style="font-weight: bold;">Join us on Telegram</span>
-      </a>
-    `;
-    document.body.appendChild(telegramOverlay);
   </script>
 </body>
 </html>
